cmake_minimum_required(VERSION 2.6)
set(LIBNAME_4 ${CMAKE_PROJECT_NAME}_${VERSION}_4 CACHE STRING "")
file(GLOB LIB_4_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.f)
file(GLOB LIB_C_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.c)
include_directories( ${ZLIB_INCLUDE_DIRS} ${PNG_INCLUDE_DIRS} ${JASPER_INCLUDE_DIR})
set_source_files_properties( ${LIB_C_SRC} PROPERTIES COMPILE_FLAGS ${CMAKE_C_FLAGS} )
set_source_files_properties( ${LIB_4_SRC} PROPERTIES COMPILE_FLAGS ${CMAKE_Fortran_4_FLAGS} )
#add_definitions( ${CMAKE_Fortran_4_FLAGS} )
add_library(${LIBNAME_4} STATIC ${LIB_4_SRC} ${LIB_C_SRC} )

set(CMAKE_INCLUDE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include_4")
set_target_properties(${LIBNAME_4} PROPERTIES Fortran_MODULE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include_4")
target_include_directories(${LIBNAME_4} PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/include_4")

file(MAKE_DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(TARGETS ${LIBNAME_4}
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib) 
install(DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY}/ DESTINATION include_4 )

