cmake_minimum_required(VERSION 2.6)
set(LIBNAME_d ${CMAKE_PROJECT_NAME}_${VERSION}_d CACHE STRING "")
file(GLOB LIB_d_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.f)
file(GLOB LIB_C_SRC ${CMAKE_CURRENT_SOURCE_DIR}/../src/*.c)
include_directories( ${ZLIB_INCLUDE_DIRS} ${PNG_INCLUDE_DIRS} ${JASPER_INCLUDE_DIR})
set_source_files_properties( ${LIB_C_SRC} PROPERTIES COMPILE_FLAGS ${CMAKE_C_FLAGS} )
set_source_files_properties( ${LIB_d_SRC} PROPERTIES COMPILE_FLAGS ${CMAKE_Fortran_d_FLAGS} )
message("HEY fortran flags are ${CMAKE_Fortran_d_FLAGS} ")
add_library(${LIBNAME_d} STATIC ${LIB_d_SRC} ${LIB_C_SRC} )
set(CMAKE_INCLUDE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include_d")
set_target_properties(${LIBNAME_d} PROPERTIES Fortran_MODULE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/include_d")
target_include_directories(${LIBNAME_d} PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/include_d")

file(MAKE_DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY})

install(TARGETS ${LIBNAME_d}
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib) 
install(DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY}/ DESTINATION include_d )

